// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render card with grey background 1`] = `
<DocumentFragment>
  .c0 {
  height: 100%;
  width: 100%;
}

.c0 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  background-color: var(--acx-neutrals-10);
}

.c0 .ant-card-head {
  display: none;
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c0 .ant-card-head-title {
  padding: 0;
}

.c0 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c0 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 .ant-card-extra {
  padding: 0;
}

.c0 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c1 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="c0"
    type="solid-bg"
  >
    <div
      class="ant-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="c1"
            />
          </div>
          <div
            class="ant-card-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component should render card with no border 1`] = `
<DocumentFragment>
  .c0 {
  height: 100%;
  width: 100%;
}

.c0 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
}

.c0 .ant-card-head {
  display: none;
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c0 .ant-card-head-title {
  padding: 0;
}

.c0 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
}

.c0 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 .ant-card-extra {
  padding: 0;
}

.c0 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c1 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="c0"
    type="no-border"
  >
    <div
      class="ant-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="c1"
            />
          </div>
          <div
            class="ant-card-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
